<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright 2019 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="app_name">Sleep Dealer</string>
    <string name="add_sleep">睡眠の追加。</string>
    <string name="task_details">睡眠環境詳細</string>
    <string name="loading_tasks_error">睡眠履歴のロードに失敗しました。</string>
    <string name="loading_task_error">睡眠のロードに失敗しました。</string>
    <string name="task_not_found">Task not found</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="menu_back">Back</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete sleep</string>
    <string name="menu_more">More</string>
    <string name="navigation_view_header_title">Sleep Dealer</string>
    <string name="description_hint">Enter your sleep here.</string>
    <string name="cd_save_task">睡眠の記録</string>
    <string name="empty_sleep_message">睡眠は空ではいけません。</string>
    <string name="successfully_saved_sleep_message">睡眠の記録をしました。</string>
    <string name="list_title">履歴</string>

    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>


    <string name="label_all">測定履歴</string>
    <string name="no_sleeps_all">睡眠記録がありません!</string>
    <string name="refresh">更新</string>
    <string name="successfully_deleted_sleep_message">睡眠記録を削除しました。</string>
    <string name="successfully_added_sleep_message">睡眠記録を追加しました。</string>
    <string name="no_data_description" />

    <!-- Content Descriptions -->
    <string name="sleeps_header_image_content_description">Sleeps header image</string>
    <string name="no_sleeps_image_content_description">No sleeps image</string>
    <string name="add_sleep_title">測定</string>
    <string name="profile_title">プロフィール</string>

</resources>
